fixed spacing a little bit

--- a/interface.css
+++ b/interface.css
@@ -37,6 +37,7 @@ ol, ul {
 }
 
 .start {
+  margin-top: -21px;
   border: 0px;
 }
 
